--- a/src/ListenTogether.Pages/Pages/LogPage.razor
+++ b/src/ListenTogether.Pages/Pages/LogPage.razor
@@ -4,51 +4,52 @@
 @using ListenTogether.Model;
 
 <Loading IsLoading="_isLoading"></Loading>
-<div class="page d-flex flex-column">
-    <div class="flex-grow-0 d-flex align-center justify-space-between">
-        <MudText Typo="Typo.h6">
-            日志
-        </MudText>
-        <MudButton Variant="Variant.Text"
-                   Class="ml-5"
-                   EndIcon="fa-solid fa-trash"
-                   IconSize="Size.Small"
-                   Size="Size.Small"
-                   OnClick="ClearLogAsync"
-                   Color="Color.Primary">清空</MudButton>
-    </div>
+<RouteAnimation>
+    <div class="page d-flex flex-column">
+        <div class="flex-grow-0 d-flex align-center justify-space-between">
+            <MudText Typo="Typo.h6">
+                日志
+            </MudText>
+            <MudButton Variant="Variant.Text"
+                       Class="ml-5"
+                       EndIcon="fa-solid fa-trash"
+                       IconSize="Size.Small"
+                       Size="Size.Small"
+                       OnClick="ClearLogAsync"
+                       Color="Color.Primary">清空</MudButton>
+        </div>
 
-    @if (_logs == null)
-    {
-        <MudSkeleton Class="mt-3" Height="20px" />
-        <MudSkeleton Class="mt-3" Height="20px" />
-        <MudSkeleton Class="mt-3" Height="20px" />
-        <MudSkeleton Class="mt-3" Height="20px" />
-        <MudSkeleton Class="mt-3" Height="20px" />
-        <MudSkeleton Class="mt-3" Height="20px" />
-    }
-    else
-    {
-        if (!_logs.Any())
+        @if (_logs == null)
         {
-            <Empty Class="mt-2" />
+            <MudSkeleton Class="mt-3" Height="20px" />
+            <MudSkeleton Class="mt-3" Height="20px" />
+            <MudSkeleton Class="mt-3" Height="20px" />
+            <MudSkeleton Class="mt-3" Height="20px" />
+            <MudSkeleton Class="mt-3" Height="20px" />
+            <MudSkeleton Class="mt-3" Height="20px" />
         }
         else
         {
-            <div class="mt-2 mb-2 flex-grow-1" style="overflow-y: auto;user-select: text;">
-                @foreach (var log in _logs)
-                {
-                    <div class="log-time mt-2 cursor-text">
-                        @(JiuLing.CommonLibs.Text.TimestampUtils.ConvertToDateTime(log.Timestamp))
-                    </div>
-                    <div class="cursor-text">@log.Message</div>
-                }
-            </div>
+            if (!_logs.Any())
+            {
+                <Empty Class="mt-2" />
+            }
+            else
+            {
+                <div class="mt-2 mb-2 flex-grow-1" style="overflow-y: auto;user-select: text;">
+                    @foreach (var log in _logs)
+                    {
+                        <div class="log-time mt-2 cursor-text">
+                            @(JiuLing.CommonLibs.Text.TimestampUtils.ConvertToDateTime(log.Timestamp))
+                        </div>
+                        <div class="cursor-text">@log.Message</div>
+                    }
+                </div>
+            }
         }
-    }
 
-</div>
-
+    </div>
+</RouteAnimation>
 @code {
     private bool _isLoading = false;
     private List<Log>? _logs;
