--- a/src/ListenTogether.Pages/Pages/LoginPage.razor
+++ b/src/ListenTogether.Pages/Pages/LoginPage.razor
@@ -7,48 +7,49 @@
 @inject ILoginDataStorage LoginDataStorage
 
 <Loading IsLoading="_isLoading"></Loading>
+<RouteAnimation>
+    <div class="page">
+        <MudGrid Class="ma-5">
+            <MudItem xs="12" md="12">
+                <MudPaper Class="pa-4" Elevation="0">
+                    <div class="d-flex mb-3">
+                        <MudIcon Icon="@Icons.Material.Filled.Lock" Color="Color.Primary"></MudIcon>
+                        <MudText Class="ml-1">登录</MudText>
+                    </div>
+                    <MudForm @ref="@_form">
+                        <MudTextField T="string"
+                                      Label="用户名"
+                        @bind-Value="_username"
+                                      MaxLength="20"
+                                      Required="true"
+                                      RequiredError="请输入用户名"
+                                      Validation="@(new Func<string, IEnumerable<string>>(InputLength))" />
+                        <MudTextField T="string" Label="密码"
+                        @bind-Value="_password"
+                                      InputType="InputType.Password"
+                                      MaxLength="20"
+                                      Required="true"
+                                      RequiredError="密码不能为空"
+                                      Immediate="true"
+                                      OnKeyDown="OnPasswordKeyDown"
+                                      Validation="@(new Func<string, IEnumerable<string>>(InputLength))" />
+                        <MudButton Class="mt-5"
+                                   Variant="Variant.Filled"
+                                   EndIcon="@Icons.Material.Filled.Login"
+                                   Color="Color.Primary"
+                                   OnClick="@(async () => await LoginAsync())">登录</MudButton>
+                        <MudButton Class="mt-5"
+                                   Variant="Variant.Filled"
+                                   EndIcon="@Icons.Material.Filled.AppRegistration"
+                                   Color="Color.Primary"
+                                   OnClick="@(  () => GotoRegisterPage())">注册</MudButton>
 
-<div class="page">
-    <MudGrid Class="ma-5">
-        <MudItem xs="12" md="12">
-            <MudPaper Class="pa-4" Elevation="0">
-                <div class="d-flex mb-3">
-                    <MudIcon Icon="@Icons.Material.Filled.Lock" Color="Color.Primary"></MudIcon>
-                    <MudText Class="ml-1">登录</MudText>
-                </div>
-                <MudForm @ref="@_form">
-                    <MudTextField T="string"
-                                  Label="用户名"
-                                  @bind-Value="_username"
-                                  MaxLength="20"
-                                  Required="true"
-                                  RequiredError="请输入用户名"
-                                  Validation="@(new Func<string, IEnumerable<string>>(InputLength))" />
-                    <MudTextField T="string" Label="密码"
-                                  @bind-Value="_password"
-                                  InputType="InputType.Password"
-                                  MaxLength="20"
-                                  Required="true"
-                                  RequiredError="密码不能为空"
-                                  Immediate="true"
-                                  OnKeyDown="OnPasswordKeyDown"
-                                  Validation="@(new Func<string, IEnumerable<string>>(InputLength))" />
-                    <MudButton Class="mt-5"
-                               Variant="Variant.Filled"
-                               EndIcon="@Icons.Material.Filled.Login"
-                               Color="Color.Primary"
-                               OnClick="@(async () => await LoginAsync())">登录</MudButton>
-                    <MudButton Class="mt-5"
-                               Variant="Variant.Filled"
-                               EndIcon="@Icons.Material.Filled.AppRegistration"
-                               Color="Color.Primary"
-                               OnClick="@(  () => GotoRegisterPage())">注册</MudButton>
-
-                </MudForm>
-            </MudPaper>
-        </MudItem>
-    </MudGrid>
-</div>
+                    </MudForm>
+                </MudPaper>
+            </MudItem>
+        </MudGrid>
+    </div>
+</RouteAnimation>
 @code {
     private bool _isLoading = false;
     private MudForm _form = null!;
