--- a/src/ListenTogether.Pages/_Imports.razor
+++ b/src/ListenTogether.Pages/_Imports.razor
@@ -6,6 +6,7 @@
 @using JiuLing.CommonLibs.ExtensionMethods
 @using MudBlazor
 @using ListenTogether.Pages.Pages
+@using ListenTogether.Pages.Shared
 @using ListenTogether.Pages.Components
 @using ListenTogether.Pages.Components.Discover
 @using ListenTogether.Pages.Components.Player
