--- a/src/ListenTogether.Pages/Pages/CachePage.razor
+++ b/src/ListenTogether.Pages/Pages/CachePage.razor
@@ -1,58 +1,59 @@
 ﻿@page "/cache"
 @using ListenTogether.EasyLog
 @inject IDialogService DialogService
+<RouteAnimation>
+    <div class="page">
 
-<div class="page">
+        @if (_cacheLength == null)
+        {
+            <div class="d-flex flex-column align-center mt-5">
+                <MudSkeleton SkeletonType="SkeletonType.Circle" Width="200px" Height="200px" />
+                <div class="d-flex align-center mt-5">
+                    <MudProgressCircular Size="Size.Small"
+                                         Indeterminate="true" />
+                    <MudText Typo="Typo.caption"
+                             Class="ml-2">
+                        正在计算
+                    </MudText>
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="d-flex flex-column align-center mt-5">
+                <div class="cache-size d-flex flex-column align-center justify-center">
+                    <MudText Typo="Typo.subtitle2">
+                        发现缓存
+                    </MudText>
+                    <MudText Typo="Typo.h6">
+                        @($"{_cacheLength / 1024 / 1024:N2}")
+                    </MudText>
+                    <MudText Typo="Typo.subtitle2">
+                        MB
+                    </MudText>
+                </div>
+                <MudText Typo="Typo.caption" Class="mt-2">
+                    @_processMessage
+                </MudText>
+                <MudButton Variant="Variant.Outlined"
+                           Class="mt-7"
+                           Size="Size.Small"
+                           Disabled="@(_isWorking || _cacheLength==0)"
+                           OnClick="ClearCacheAsync">全部清理</MudButton>
 
-    @if (_cacheLength == null)
-    {
-        <div class="d-flex flex-column align-center mt-5">
-            <MudSkeleton SkeletonType="SkeletonType.Circle" Width="200px" Height="200px" />
-            <div class="d-flex align-center mt-5">
-                <MudProgressCircular Size="Size.Small"
-                                     Indeterminate="true" />
-                <MudText Typo="Typo.caption"
-                         Class="ml-2">
-                    正在计算
+                <MudButton Variant="Variant.Outlined"
+                           Class="mt-4"
+                           Size="Size.Small"
+                           Disabled="@(_isWorking || _cacheLength==0)"
+                           OnClick="ClearErrorCacheAsync">修复不可用缓存</MudButton>
+                <MudText Typo="Typo.caption" Class="mt-2">
+                    清理老版本中部分无法播放的歌曲
                 </MudText>
             </div>
-        </div>
-    }
-    else
-    {
-        <div class="d-flex flex-column align-center mt-5">
-            <div class="cache-size d-flex flex-column align-center justify-center">
-                <MudText Typo="Typo.subtitle2">
-                    发现缓存
-                </MudText>
-                <MudText Typo="Typo.h6">
-                    @($"{_cacheLength / 1024 / 1024:N2}")
-                </MudText>
-                <MudText Typo="Typo.subtitle2">
-                    MB
-                </MudText>
-            </div>
-            <MudText Typo="Typo.caption" Class="mt-2">
-                @_processMessage
-            </MudText>
-            <MudButton Variant="Variant.Outlined"
-                       Class="mt-7"
-                       Size="Size.Small"
-                       Disabled="@(_isWorking || _cacheLength==0)"
-                       OnClick="ClearCacheAsync">全部清理</MudButton>
+        }
 
-            <MudButton Variant="Variant.Outlined"
-                       Class="mt-4"
-                       Size="Size.Small"
-                       Disabled="@(_isWorking || _cacheLength==0)"
-                       OnClick="ClearErrorCacheAsync">修复不可用缓存</MudButton>
-            <MudText Typo="Typo.caption" Class="mt-2">
-                清理老版本中部分无法播放的歌曲
-            </MudText>
-        </div>
-    }
-
-</div>
+    </div>
+</RouteAnimation>
 @code {
     private double? _cacheLength;
     private bool _isWorking = false;
