--- a/src/ListenTogether.Pages/Pages/MyFavoriteDetailPage.razor
+++ b/src/ListenTogether.Pages/Pages/MyFavoriteDetailPage.razor
@@ -9,102 +9,102 @@
 @inject ISnackbar Snackbar
 
 <Loading IsLoading="_isLoading"></Loading>
-
-@if (_myFavorite == null)
-{
-    <div class="d-flex">
-        <MudText Typo="Typo.h6">歌单</MudText>
-        <MudSkeleton Class="ml-3" Width="50%" />
-    </div>
-}
-else
-{
-    <div class="header">
-        <div class="d-flex align-end">
-            <MudText Typo="Typo.h6">歌单</MudText>
-            <MudText Typo="Typo.subtitle1" Class="ml-2">@_myFavorite.Name</MudText>
-        </div>
-        <div class="tool">
-            <MudButton Variant="Variant.Text"
-                       Class="ml-5"
-                       EndIcon="@Icons.Material.Filled.Edit"
-                       IconSize="Size.Small"
-                       Size="Size.Small"
-                       OnClick="MyFavoriteRenameAsync"
-                       Color="Color.Primary">重命名</MudButton>
-            <MudButton Variant="Variant.Text"
-                       Class="ml-2"
-                       EndIcon="fa-solid fa-trash"
-                       IconSize="Size.Small"
-                       Size="Size.Small"
-                       OnClick="DeleteMyFavoriteAsync"
-                       Color="Color.Primary">删除歌单</MudButton>
-        </div>
-    </div>
-}
-
-@if (_myFavoriteDetailList == null)
-{
-    <MudSkeleton Class="mt-1" Height="40px" />
-    <MudSkeleton Class="mt-1" Height="40px" />
-    <MudSkeleton Class="mt-1" Height="40px" />
-    <MudSkeleton Class="mt-1" Height="40px" />
-}
-else
-{
-    @if (!_myFavoriteDetailList.Any())
+<RouteAnimation>
+    @if (_myFavorite == null)
     {
-        <Empty OnRefresh="GetMyFavoriteDetailListAsync" />
+        <div class="d-flex">
+            <MudText Typo="Typo.h6">歌单</MudText>
+            <MudSkeleton Class="ml-3" Width="50%" />
+        </div>
     }
     else
     {
-        var index = 1;
-        <MudList>
-            @foreach (var myFavoriteDetail in _myFavoriteDetailList)
-            {
-                <MudListItem>
-                    <div class="d-flex align-center my-favorite-detail">
-                        <div class="flex-grow-0 tool">
-                            <div class="play">
-                                <MudIconButton Icon="fa-solid fa-trash"
-                                               Size="Size.Medium"
-                                               OnClick="@(()=>DeleteAsync(myFavoriteDetail.Id))"></MudIconButton>
-                            </div>
-                        </div>
+        <div class="header">
+            <div class="d-flex align-end">
+                <MudText Typo="Typo.h6">歌单</MudText>
+                <MudText Typo="Typo.subtitle1" Class="ml-2">@_myFavorite.Name</MudText>
+            </div>
+            <div class="tool">
+                <MudButton Variant="Variant.Text"
+                           Class="ml-5"
+                           EndIcon="@Icons.Material.Filled.Edit"
+                           IconSize="Size.Small"
+                           Size="Size.Small"
+                           OnClick="MyFavoriteRenameAsync"
+                           Color="Color.Primary">重命名</MudButton>
+                <MudButton Variant="Variant.Text"
+                           Class="ml-2"
+                           EndIcon="fa-solid fa-trash"
+                           IconSize="Size.Small"
+                           Size="Size.Small"
+                           OnClick="DeleteMyFavoriteAsync"
+                           Color="Color.Primary">删除歌单</MudButton>
+            </div>
+        </div>
+    }
 
-                        <MouseDiv Class="d-flex align-center flex-grow-1" OnClick="@(()=>Play(myFavoriteDetail))">
-                            <div class="mr-3 seq">@(index++)</div>
-                            <div>
-                                <div class="d-flex align-center">
-                                    <MudChip Label="true"
-                                             Variant="Variant.Outlined"
-                                             Class="mr-2"
-                                             Style="font-size: 12px;width: 35px;height: 20px;opacity: 0.7;padding-left: 6px;"
-                                             Size="Size.Small">@myFavoriteDetail.Music.Platform.GetDescription()</MudChip>
+    @if (_myFavoriteDetailList == null)
+    {
+        <MudSkeleton Class="mt-1" Height="40px" />
+        <MudSkeleton Class="mt-1" Height="40px" />
+        <MudSkeleton Class="mt-1" Height="40px" />
+        <MudSkeleton Class="mt-1" Height="40px" />
+    }
+    else
+    {
+        @if (!_myFavoriteDetailList.Any())
+        {
+            <Empty OnRefresh="GetMyFavoriteDetailListAsync" />
+        }
+        else
+        {
+            var index = 1;
+            <MudList>
+                @foreach (var myFavoriteDetail in _myFavoriteDetailList)
+                {
+                    <MudListItem>
+                        <div class="d-flex align-center my-favorite-detail">
+                            <div class="flex-grow-0 tool">
+                                <div class="play">
+                                    <MudIconButton Icon="fa-solid fa-trash"
+                                                   Size="Size.Medium"
+                                                   OnClick="@(()=>DeleteAsync(myFavoriteDetail.Id))"></MudIconButton>
+                                </div>
+                            </div>
+
+                            <MouseDiv Class="d-flex align-center flex-grow-1" OnClick="@(()=>Play(myFavoriteDetail))">
+                                <div class="mr-3 seq">@(index++)</div>
+                                <div>
+                                    <div class="d-flex align-center">
+                                        <MudChip Label="true"
+                                                 Variant="Variant.Outlined"
+                                                 Class="mr-2"
+                                                 Style="font-size: 12px;width: 35px;height: 20px;opacity: 0.7;padding-left: 6px;"
+                                                 Size="Size.Small">@myFavoriteDetail.Music.Platform.GetDescription()</MudChip>
+                                        <div>
+                                            <MudText Typo="Typo.subtitle1">
+                                                @myFavoriteDetail.Music.Name
+                                            </MudText>
+                                        </div>
+
+                                    </div>
                                     <div>
-                                        <MudText Typo="Typo.subtitle1">
-                                            @myFavoriteDetail.Music.Name
+                                        <MudText Typo="Typo.caption" Class="ml-2">
+                                            @($"{myFavoriteDetail.Music.Artist} - {myFavoriteDetail.Music.Album}")
                                         </MudText>
                                     </div>
-
                                 </div>
-                                <div>
-                                    <MudText Typo="Typo.caption" Class="ml-2">
-                                        @($"{myFavoriteDetail.Music.Artist} - {myFavoriteDetail.Music.Album}")
-                                    </MudText>
-                                </div>
-                            </div>
-                        </MouseDiv>
-                    </div>
-                </MudListItem>
-                <MudHidden Breakpoint="Breakpoint.MdAndUp">
-                    <MudDivider />
-                </MudHidden>
-            }
-        </MudList>
+                            </MouseDiv>
+                        </div>
+                    </MudListItem>
+                    <MudHidden Breakpoint="Breakpoint.MdAndUp">
+                        <MudDivider />
+                    </MudHidden>
+                }
+            </MudList>
+        }
     }
-}
-
+</RouteAnimation>
 @code {
     [Parameter]
     public int MyFavoriteId { get; set; }
