--- a/src/ListenTogether.Pages/Pages/PlaylistPage.razor
+++ b/src/ListenTogether.Pages/Pages/PlaylistPage.razor
@@ -11,74 +11,74 @@
 @inject ISnackbar Snackbar
 
 <Loading IsLoading="_isLoading"></Loading>
-
-<div class="header">
-    <div>
-        <MudText Typo="Typo.h6">播放列表</MudText>
+<RouteAnimation>
+    <div class="header">
+        <div>
+            <MudText Typo="Typo.h6">播放列表</MudText>
+        </div>
+        @if (_playlist != null && _playlist.Any())
+        {
+            <MudButton Variant="Variant.Text"
+                       Class="ml-5"
+                       EndIcon="fa-solid fa-trash"
+                       IconSize="Size.Small"
+                       Size="Size.Small"
+                       OnClick="@(()=>ClearAsync())"
+                       Color="Color.Primary">清空</MudButton>
+        }
     </div>
-    @if (_playlist != null && _playlist.Any())
-    {
-        <MudButton Variant="Variant.Text"
-                   Class="ml-5"
-                   EndIcon="fa-solid fa-trash"
-                   IconSize="Size.Small"
-                   Size="Size.Small"
-                   OnClick="@(()=>ClearAsync())"
-                   Color="Color.Primary">清空</MudButton>
-    }
-</div>
 
-@if (_playlist == null)
-{
-    <MudSkeleton Class="mt-1" Height="40px" />
-    <MudSkeleton Class="mt-1" Height="40px" />
-    <MudSkeleton Class="mt-1" Height="40px" />
-    <MudSkeleton Class="mt-1" Height="40px" />
-}
-else
-{
-    @if (!_playlist.Any())
+    @if (_playlist == null)
     {
-        <Empty OnRefresh="GetPlaylistAsync" />
+        <MudSkeleton Class="mt-1" Height="40px" />
+        <MudSkeleton Class="mt-1" Height="40px" />
+        <MudSkeleton Class="mt-1" Height="40px" />
+        <MudSkeleton Class="mt-1" Height="40px" />
     }
     else
     {
-        <MudList>
-            @foreach (var playlistItem in _playlist)
-            {
-                <MudListItem>
-                    <div class="d-flex align-center playlist-detail">
-                        <div class="flex-grow-0 tool">
-                            @if (IsLogin)
-                            {
-                                <MudIconButton Size="Size.Small"
-                                               Icon="fa-solid fa-folder-plus"
-                                               OnClick="@(()=>AddToMyFavoriteAsync(playlistItem))" />
-                            }
-                            <MudIconButton Icon="fa-solid fa-trash"
-                                           Class="ml-2"
-                                           Size="Size.Small"
-                                           OnClick="@(()=>DeleteAsync(playlistItem.Id))" />
+        @if (!_playlist.Any())
+        {
+            <Empty OnRefresh="GetPlaylistAsync" />
+        }
+        else
+        {
+            <MudList>
+                @foreach (var playlistItem in _playlist)
+                {
+                    <MudListItem>
+                        <div class="d-flex align-center playlist-detail">
+                            <div class="flex-grow-0 tool">
+                                @if (IsLogin)
+                                {
+                                    <MudIconButton Size="Size.Small"
+                                                   Icon="fa-solid fa-folder-plus"
+                                                   OnClick="@(()=>AddToMyFavoriteAsync(playlistItem))" />
+                                }
+                                <MudIconButton Icon="fa-solid fa-trash"
+                                               Class="ml-2"
+                                               Size="Size.Small"
+                                               OnClick="@(()=>DeleteAsync(playlistItem.Id))" />
+                            </div>
+
+                            <MouseDiv Class="d-flex align-center flex-grow-1 info" OnClick="@(()=>Play(playlistItem))">
+                                <div class="music-name">
+                                    @playlistItem.Name
+                                </div>
+                                <div class="music-artist">
+                                    @($" - {playlistItem.Artist}")
+                                </div>
+                            </MouseDiv>
                         </div>
-
-                        <MouseDiv Class="d-flex align-center flex-grow-1 info" OnClick="@(()=>Play(playlistItem))">
-                            <div class="music-name">
-                                @playlistItem.Name
-                            </div>
-                            <div class="music-artist">
-                                @($" - {playlistItem.Artist}")
-                            </div>
-                        </MouseDiv>
-                    </div>
-                </MudListItem>
-                <MudHidden Breakpoint="Breakpoint.MdAndUp">
-                    <MudDivider />
-                </MudHidden>
-            }
-        </MudList>
+                    </MudListItem>
+                    <MudHidden Breakpoint="Breakpoint.MdAndUp">
+                        <MudDivider />
+                    </MudHidden>
+                }
+            </MudList>
+        }
     }
-}
-
+</RouteAnimation>
 @code {
 
     private bool _isLoading = false;
