--- a/src/ListenTogether.Pages/Pages/SongMenuPage.razor
+++ b/src/ListenTogether.Pages/Pages/SongMenuPage.razor
@@ -5,25 +5,27 @@
 @inject ISnackbar Snackbar
 @inject MusicResultService MusicResultService
 
-<div class="d-flex mb-3">
-    <MudImage Src="@_songMenu.ImageUrl"
-              Elevation="25"
-              ObjectFit="ObjectFit.Cover"
-              Width="120"
-              Height="120"
-              Class="rounded-lg" />
-    <div class="ml-3 d-flex flex-column">
-        <MudText Typo="Typo.h6" Class="mt-1 mb-2">@_songMenu.Name</MudText>
-        <MudButton Variant="Variant.Outlined"
-                   StartIcon="@Icons.Material.Filled.PlayCircleOutline"
-                   Size="Size.Small"
-                   IconColor="Color.Primary"
-                   Disabled="@(_musics==null || !_musics.Any())"
-                   OnClick="PlayAllAsync">播放全部</MudButton>
+<RouteAnimation>
+    <div class="d-flex mb-3">
+        <MudImage Src="@_songMenu.ImageUrl"
+                  Elevation="25"
+                  ObjectFit="ObjectFit.Cover"
+                  Width="120"
+                  Height="120"
+                  Class="rounded-lg" />
+        <div class="ml-3 d-flex flex-column">
+            <MudText Typo="Typo.h6" Class="mt-1 mb-2">@_songMenu.Name</MudText>
+            <MudButton Variant="Variant.Outlined"
+                       StartIcon="@Icons.Material.Filled.PlayCircleOutline"
+                       Size="Size.Small"
+                       IconColor="Color.Primary"
+                       Disabled="@(_musics==null || !_musics.Any())"
+                       OnClick="PlayAllAsync">播放全部</MudButton>
+        </div>
     </div>
-</div>
 
-<MusicResultView Musics="@_musics" />
+    <MusicResultView Musics="@_musics" />
+</RouteAnimation>
 @code {
 
     [Parameter]
